--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,16 @@ environment:
 dependencies:
   cloud_firestore: ^5.2.1
   cupertino_icons: ^1.0.6
+  emoji_picker_flutter: ^2.2.0
   firebase_auth: ^5.1.4
   firebase_core: ^3.3.0
+  firebase_messaging: ^15.0.4
   firebase_storage: ^12.1.3
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.8
   image_picker: ^1.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
