--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.2.8
   image_picker: ^1.1.2
   intl: ^0.19.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_lints: ^3.0.0
